welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:3: error: not found: value x
	if (Math.abs(100 - n) <= 10 || Math.abs(200 - x) <= 10) return true;
                                                      ^