welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {

	if (Math.abs(100 - n) <= 10 || Math.abs(200 - x) <= 10) return true;
	else return false;
}
